# PumaGuard

./: .gitignore  .gitmodules  .readthedocs.yaml  Makefile  README.md  RELEASE.md  classifying_lions.ipynb  pylintrc  pyproject.toml  requirements.txt  test-requirements.txt  test-requirementx.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build-webpage.yaml  codeql.yaml  issues.yaml  linter.yaml  package.yaml  release.yaml  test-and-package.yaml
data/team-eagles/lion/: Mountain-lions-trail-cam-1.2.24.avif
docs/: Lights
docs/source/: About.rst  Camera parts  Camera_parts.rst  Cameralocation.rst  HLD.rst  Parts.rst  Performance.rst  PowerConsiderations.rst  README.md  README.rst  RFC-01.rst  WeatherProofing.rst  camerapowerconsumption.rst  classify.rst  conf.py  index.rst  lights.rst  modules.rst  notebooks.rst  pumaguard.cmd.rst  pumaguard.completions.rst  pumaguard.models.rst  pumaguard.rst  raspberrypie5powerconsumption.rst  requirements.txt  solarpanelresearch.rst  test.rst
docs/source/_static/: custom.css
docs/source/presentations/: 2024-12-08 PEEC Presentations.odp
models/: model_history_1_light_128_128.pickle  model_history_1_light_tf2.15_128_128.pickle  model_history_1_light_tf2.17_128_128.pickle  model_history_2_light_256_256.pickle  model_history_3_light_tf2.15_256_256.pickle  model_history_4_Xception_224_224.pickle  model_history_4_pre-trained_128_128.pickle  model_history_5_pre-trained_tf2.15_128_128.pickle  model_history_6_pre-trained_512_512.pickle  model_history_6_pre-trained_tf2.17_512_512.pickle  model_history_9_light-3_512_512.pickle  model_history_9_light-3_tf2.15_512_512.pickle  model_history_Adis_XCeption_224_224.pickle  model_history_Adis_XCeption_512_512.pickle  model_settings_1_light_128_128.yaml  model_settings_2_light_256_256.yaml  model_settings_3_light_256_256.yaml  model_settings_4_pre-trained_128_128.yaml  model_settings_5_pre-trained_128_128.yaml  model_settings_6_pre-trained_512_512.yaml  model_settings_7_pre-trained_512_512.yaml  model_settings_9_light-3_512_512.yaml  model_weights_9_light-3_512_512.keras
notebooks/: ML-Adis-docver1.ipynb  Mountain Lions - 4.ipynb  Mountain Lions - Adis - 5.ipynb  Mountain Lions - Adis.ipynb  Mountain_Lions.ipynb  SimpleSuchiAlgorithm0.ipynb  mountain_lion_2.ipynb  mountain_lion_3.ipynb  mountain_lion_4.ipynb  mountain_lion_5.ipynb  mountain_lion_6.ipynb  train.ipynb
puma_guard/: main.py
pumaguard/: __init__.py  classify.py  main.py  model.py  model_factory.py  output.py  presets.py  server.py  train.py  traininghistory.py  utils.py  verify.py
pumaguard/cmd/: classify.py  server.py  trailcam.py  train.py
pumaguard/completions/: pumaguard-classify-completions.sh  pumaguard-completions.sh  pumaguard-server-completions.sh  pumaguard-train-completions.sh
pumaguard/models/: __init__.py  light.py  light_2.py  light_3.py  light_4.py  pretrained.py
scripts/: classify-bash-completions.sh  classify.py  configure-pi.yaml  launch-pi-VM.sh  launch-pi-zero.sh  pick_files.py  pumaguard  pumaguard-train-snap-wrapper.sh  pyproject.toml  server-bash-completions.sh  server.py  train.py  verify.py
scripts/scripts/: pick_files.py
settings/: notebook-1.yaml
snap/: snapcraft.yaml
tests/: test_classify.py  test_main.py  test_output.py  test_pick_files.py  test_presets.py  test_server.py  test_tensorflow.py  test_trailcam.py  test_utils.py
