[tool.poetry]
name = "pumaguard"
version = "0.0.0"
description = ""
authors = ["Nicolas Bock <nicolasbock@gmail.com>"]
readme = "README.md"
homepage = "http://pumaguard.rtfd.io/"
repository = "https://github.com/PEEC-Nature-Youth-Group/PumaGuard"

[tool.poetry.dependencies]
flask = "^3.0.3"
matplotlib = "^3.9.2"
pillow = "^10.4.0"
python = ">=3.12,<4.0"
tensorflow = "^2.18"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.10.0", markers = 'platform_system != "Windows"' }
bashate = "^2.1.1"
ipykernel = "^6.29.5"
mypy = "^1.11.2"
pylint = "^3.2.6"
pynblint = "^0.1.6"
pytest = "^8.3"
pytest-cov = "^6.0"

[tool.poetry.scripts]
pick-files = 'scripts.pick_files:main'
pumaguard-classify = 'pumaguard.classify:main'
pumaguard-train = 'pumaguard.train:main'
pumaguard-server = 'pumaguard.server:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
