[tool.poetry]
name = "pumaguard"
version = "0.0.0"
description = ""
authors = ["Nicolas Bock <nicolasbock@gmail.com>"]
readme = "README.md"
homepage = "http://pumaguard.rtfd.io/"
repository = "https://github.com/PEEC-Nature-Youth-Group/PumaGuard"

[tool.poetry.dependencies]
flask = "^3.0.3"
matplotlib = "^3.9.2"
pillow = "^10.4.0"
python = ">=3.10,<3.12"
pyyaml = "^6.0.2"
tensorflow = "2.15.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.10.0", markers = 'platform_system != "Windows"' }
bashate = "^2.1.1"
ipykernel = "^6.29.5"
isort = "^5.13.2"
mypy = "^1.11.2"
pylint = "^3.2.6"
pynblint = "^0.1.6"
pytest = "^8.2.2"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
pick-files = 'scripts.pick_files:main'
pumaguard = 'pumaguard.main:main'
pumaguard-classify = 'pumaguard.classify:main'
pumaguard-server = 'pumaguard.server:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = true
include_trailing_comma = true
multi_line_output = "VERTICAL_HANGING_INDENT"
py_version = 310
split_on_trailing_comma = true
