[tool.poetry]
name = "pumaguard"
version = "0.0.0"
description = ""
authors = ["Nicolas Bock <nicolasbock@gmail.com>"]
readme = "README.md"
homepage = "http://pumaguard.rtfd.io/"
repository = "https://github.com/PEEC-Nature-Youth-Group/PumaGuard"

[tool.poetry.dependencies]
matplotlib = "~=3.10"
packaging = "^24.2"
pillow = "~=11.1"
python = ">=3.10,<4.0"
pyyaml = "~=6.0"
tensorflow = {extras = ["and-cuda"], version = ">=2.15"}

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "~=25.1", markers = 'platform_system != "Windows"' }
bashate = "~=2.1"
ipykernel = "~=6.29"
isort = "~=5.13"
mypy = "~=1.14"
pylint = "~=3.3"
pynblint = "~=0.1"
pytest = "~=8.3"
pytest-cov = "~=6.0"

[tool.poetry.scripts]
pick-files = 'scripts.pick_files:main'
pumaguard = 'pumaguard.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = true
include_trailing_comma = true
multi_line_output = "VERTICAL_HANGING_INDENT"
py_version = 310
split_on_trailing_comma = true
