[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
pick-files = 'scripts.pick_files:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
